--- a/MKIX/app/src/main/res/values/strings.xml
+++ b/MKIX/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+    <string name="photo_info">Photo Info</string>
 </resources>
