--- a/MKIX/app/src/main/res/values/strings.xml
+++ b/MKIX/app/src/main/res/values/strings.xml
@@ -106,4 +106,9 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="photo_info">Photo Info</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="sobre">Sobre</string>
 </resources>
